--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Guiminamflix</title>
+    <title>Julia River</title>
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>HISTORIAS ASSUSTADORAS</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>gato de botas</h1>
-            <p>#gatodebotas</p>
-        </div>
+             </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JtztBVBcfTE?si=i_4Jj5sfLo4rBtgS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src=<iframe width="560" height="315" src="https://www.youtube.com/embed/BjN8O64wNsU?si=-WCeZNSA9HLjA8Ky" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>></iframe>
         </div>
     </section>
 
