--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     <section class="categoria">
        <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+            <a href="https://www.youtube.com/watch?v=I1CeGzQg8a4">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+            <a href="https://www.youtube.com/watch?v=DnAsU3kKaRk">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+            <a href="https://www.youtube.com/watch?v=5tc_J8qOH2E">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+            <a href="https://www.youtube.com/watch?v=anLuuL1ZOlA">
                 <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+            <a href="https://www.youtube.com/watch?v=-vb0aYMNaNg">
                 <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
             </a>
         </div>
