--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     <section class="categoria">
        <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=I1CeGzQg8a4">
+            <a href="https://www.youtube.com/watch?v=M2wTduJAYKY">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=DnAsU3kKaRk">
+            <a href="https://www.youtube.com/watch?v=fk4kjuHE8Qk">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=5tc_J8qOH2E">
+            <a href="https://www.youtube.com/watch?v=7rHGmiW4cxs">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=anLuuL1ZOlA">
+            <a href="https://www.youtube.com/watch?v=2dsG56lIhPs">
                 <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=-vb0aYMNaNg">
+            <a href="https://www.youtube.com/watch?v=2dsG56lIhPs">
                 <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
             </a>
         </div>
