--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
             <a href="https://www.youtube.com/watch?v=M2wTduJAYKY">
                 <img src="https://img.youtube.com/vi/M2wTduJAYKY/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=fk4kjuHE8Qk">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=P53uotIKPzo">
+                <img src="https://img.youtube.com/vi/P53uotIKPzo/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=7rHGmiW4cxs">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+                <img src="https://img.youtube.com/vi/7rHGmiW4cxs/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=2dsG56lIhPs">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+                <img src="https://img.youtube.com/vi/2dsG56lIhPs/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=2dsG56lIhPs">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=A0wpt1Kesy8">
+                <img src="https://img.youtube.com/vi/dA0wpt1Kesy8/maxresdefault.jpg" />
             </a>
         </div>
     </section>
